
Version (SVN)
-------------

JDO:   Fixed bug CASTOR-1457 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduce JDO specific ClassDescriptporResolver (and refactor class hierarchy in this area).
       Details: http://jira.codehaus.org/browse/CASTOR-1457
       (Werner - 20060628)

JDO:   Fixed bug CASTOR-1465 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Changed transaction handling semantics in CacheManager.expireCache(Class, Object[]).
       Details: http://jira.codehaus.org/browse/CASTOR-1465
       (Werner - 20060626)

JDO:   Fixed bug CASTOR-1464 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed incorrect use of reflection in JOTMTransactionManagerFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1464
       (Werner - 20060626)

All:   Resolved issue CASTOR-1463 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Extract loading of mapping from Mapping into new MappingUnmarshaller.
       Details: http://jira.codehaus.org/browse/CASTOR-1463
       (Ralf - 20060626)

All:   Resolved issue CASTOR-1459 using contribution from Dave Brosius [dbrosius@qis.net]
       Removed use of reflective toArray() calls by passing in a properly sized array.
       Details: http://jira.codehaus.org/browse/CASTOR-1459
       (Ralf - 20060626)

XML:   Resolved issue CASTOR-1460 using contribution from Dave Brosius [dbrosius@qis.net]
       Fixed bad boolean test.
       Details: http://jira.codehaus.org/browse/CASTOR-1460
       (Ralf - 20060626)

JDO:   Resolved issue CASTOR-1461 using contribution from Dave Brosius [dbrosius@qis.net]
       Used local variable instead of refetching it.
       Details: http://jira.codehaus.org/browse/CASTOR-1461
       (Ralf - 20060626)

XML:   Resolved issue CASTOR-1462 using contribution from Dave Brosius [dbrosius@qis.net]
       Moved wrongly placed parenthesis that caused toString() being executed for no reason.